--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,13 @@ captures/
 # Google Services (e.g. APIs or Firebase)
 google-services.json
 
+# fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
+fastlane/readme.md
+
 # Freeline
 freeline.py
 freeline/
