--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //firebase
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     implementation 'com.android.support:mediarouter-v7:28.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.4'
+    //maps
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
+    implementation 'com.android.volley:volley:1.1.1'
 }
